added channel envKey

--- a/env/arnold_4_2_3.env
+++ b/env/arnold_4_2_3.env
@@ -3,6 +3,7 @@
 'version': '4.2.3',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': [  ],
+'channel' : [ 'stable' ],
 'environment':
 	{
 	'ARNOLD': {'darwin': '${PG_SW_BASE}/solidangle/Arnold-${ARNOLD_VERSION}-darwin',
