--- a/env/base.env
+++ b/env/base.env
@@ -8,7 +8,9 @@
 	'OSNAME': {'darwin': '`uname -s`', 'linux': '`uname -s`', 'windows': 'Windows', 'strict': True,},
 	'PATH': {'darwin': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
 				'linux': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',},
-	'PG_SW_BASE': {'darwin': '/base/sw', 'linux': '/base/sw', 'windows': 'C:/base/sw', 'strict': True,},
-	'peregrinel_LICENSE': '5053@maitred',
-	}
+	'STUDIO_SW_BASE': { 'darwin' : '/base/sw', 
+	                    'linux'  : '/base/sw', 
+	                    'windows': 'S:', 'strict': True,
+	    },
+	},
 }
