--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -2,29 +2,52 @@
 'tool': 'maya', 
 'version': '2015',
 'platforms': [ 'windows', 'linux', 'darwin' ],
-'requires': [  ],
+'requires': [ 'base', 'pythonBase' ],
+
 'environment':
-	{
-	'MAYA_VERSION': '2015',
-	'MAYA_LOCATION': { 'darwin': '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
-						'linux': '/usr/autodesk/maya${MAYA_VERSION}-x64',
-						'windows': 'C:/Program Files/Autodesk/Maya${MAYA_VERSION}', },
-	'PATH': { 'darwin': '${MAYA_LOCATION}/bin',
-				'linux': '${MAYA_LOCATION}/bin',
-				'windows': '${MAYA_LOCATION}/bin;C:/Program Files/Common Files/Autodesk Shared/;C:/Program Files (x86)/Autodesk/Backburner/', },
-	'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
-	},
-	'optional': { 'dev':
-					{
-	'MAYA_DEV_BUILDS': { 'common': '${DEV_BUILDS}', 'abs': ['windows','linux',], },
-	'PATH': { 'darwin': '${MAYA_DEV_BUILDS}',
-				'linux': '${MAYA_DEV_BUILDS}',
-				'windows': '${MAYA_DEV_BUILDS}', },
-	'MAYA_SCRIPT_PATH': '${MAYA_DEV_BUILDS}/mel',
-	'MAYA_SHELF_PATH': '${MAYA_DEV_BUILDS}/shelves',
-	'XBMLANGPATH': '${MAYA_DEV_BUILDS}/icons',
-	'MAYA_PLUG_IN_PATH': '${MAYA_DEV_BUILDS}',
-	'MI_CUSTOM_SHADER_PATH': '${MAYA_DEV_BUILDS}',
-					},
-				 },
+    {
+    'CHANNEL' : 'beta',
+    'MAYA_VERSION': '2015',
+    'STUDIO_MAYA_VER' : '${STUDIO_MAYA_VER}/${MAYA_VERSION}', 
+    
+    'MAYA_LOCATION': { 'darwin' : '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
+                       'linux'  : '/usr/autodesk/maya${MAYA_VERSION}-x64',
+                       'windows': 'C:/Program Files/Autodesk/Maya${MAYA_VERSION}', 
+    },
+
+    'PATH': { 'darwin': '${MAYA_LOCATION}/bin',
+               'linux': '${MAYA_LOCATION}/bin',
+             'windows': '${MAYA_LOCATION}/bin;C:/Program Files/Common Files/Autodesk Shared/;C:/Program Files (x86)/Autodesk/Backburner/', 
+    },
+
+    'MAYA_SCRIPT_PATH'     : '${STUDIO_MAYA_VER}/scripts',
+    'MAYA_SHELF_PATH'      : '${STUDIO_MAYA_VER}/shelves',
+    'MAYA_MODULE_PATH'     : '${STUDIO_MAYA_VER}/modules',
+    'XBMLANGPATH'          : '${STUDIO_MAYA_VER}/icons',
+    'MAYA_PLUG_IN_PATH'    : '${STUDIO_MAYA_VER}/plug-ins',
+    'MI_CUSTOM_SHADER_PATH': '${STUDIO_MAYA_VER}/mentalray/include',
+
+    'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
+    
+    'PYTHONPATH' : '${STUDIO_MAYA_VER}/beta/python',
+    },
+
+
+    'optional': { 'dev-user':
+        {
+        'MAYA_DEV': '${USER_DEV}/mayaAppdir/${MAYA_VERSION}-x64-dev/dev',
+        'PATH': { 'darwin' : '${MAYA_DEV}',
+                  'linux'  : '${MAYA_DEV}',
+                  'windows': '${MAYA_DEV}', 
+        },
+        'PYTHONPATH' : '${MAYA_DEV}/python',
+
+        'MAYA_SCRIPT_PATH'     : '${MAYA_DEV}/scripts',
+        'MAYA_SHELF_PATH'      : '${MAYA_DEV}/shelves',
+        'MAYA_SHELF_PATH'      : '${MAYA_DEV}/modules',
+        'XBMLANGPATH'          : '${MAYA_DEV}/icons',
+        'MAYA_PLUG_IN_PATH'    : '${MAYA_DEV}/plug-ins',
+        'MI_CUSTOM_SHADER_PATH': '${MAYA_DEV}/mentalray/include',
+        },
+    },
 }
