--- a/env/base.env
+++ b/env/base.env
@@ -1,16 +1,21 @@
 {
-'tool': 'base', 
+'tool': 'base',
 'version': '',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': [],
 'environment':
-	{
-	'OSNAME': {'darwin': '`uname -s`', 'linux': '`uname -s`', 'windows': 'Windows', 'strict': True,},
-	'PATH': {'darwin': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
-				'linux': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',},
-	'STUDIO_SW_BASE': { 'darwin' : '/base/sw', 
-	                    'linux'  : '/base/sw', 
-	                    'windows': 'S:', 'strict': True,
-	    },
-	},
+    {
+    'OSNAME': {'darwin': '`uname -s`', 'linux': '`uname -s`', 'windows': 'Windows', 'strict': True, },
+    'PATH': {
+        'darwin': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
+        'linux': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin', 
+         },
+    'STUDIO_SW_BASE': { 
+        'darwin' : '/base/sw',
+        'linux'  : '/base/sw',
+        'windows': 'S:', 
+        'strict': True,
+        },
+    'STUDIO_USER_HOME': { 'windows':  '${STUDIO_SW_BASE}\dev_area\users\${USERNAME}' }
+    },
 }
