- amended test user area

--- a/env/dev_user.env
+++ b/env/dev_user.env
@@ -6,8 +6,7 @@
 'environment':
 	{
 	'PG_CMAKE_MODULE_PATH': '${ECO_ROOT}/dev/cmake',
-	'USER_DEV': 'S:/dev_area/Johnny',
-	'CHANNEL': 'dev',
+	'USER_DEV': 'S:/dev_area/jcochrane',
 	'PATH': { 'windows': '${USER_DEV}/apps', },
 	}
 }
