- mass updates to envVars setup

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -6,48 +6,68 @@
 
 'environment':
     {
-    'CHANNEL' : 'beta',
+    'CHANNEL': 'beta', #should change to stable
     'MAYA_VERSION': '2015',
-    'STUDIO_MAYA_VER' : '${STUDIO_MAYA_VER}/${MAYA_VERSION}', 
+    'STUDIO_MAYA': '${STUDIO_SW_BASE}/MayaAPPDIR',
+    'STUDIO_MAYA_DEPLOY' : '${STUDIO_MAYA}/${MAYA_VERSION}/${CHANNEL}', 
     
     'MAYA_LOCATION': { 'darwin' : '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
                        'linux'  : '/usr/autodesk/maya${MAYA_VERSION}-x64',
                        'windows': 'C:/Program Files/Autodesk/Maya${MAYA_VERSION}', 
     },
-
     'PATH': { 'darwin': '${MAYA_LOCATION}/bin',
                'linux': '${MAYA_LOCATION}/bin',
              'windows': '${MAYA_LOCATION}/bin;C:/Program Files/Common Files/Autodesk Shared/;C:/Program Files (x86)/Autodesk/Backburner/', 
     },
-
-    'MAYA_SCRIPT_PATH'     : '${STUDIO_MAYA_VER}/scripts',
-    'MAYA_SHELF_PATH'      : '${STUDIO_MAYA_VER}/shelves',
-    'MAYA_MODULE_PATH'     : '${STUDIO_MAYA_VER}/modules',
-    'XBMLANGPATH'          : '${STUDIO_MAYA_VER}/icons',
-    'MAYA_PLUG_IN_PATH'    : '${STUDIO_MAYA_VER}/plug-ins',
-    'MI_CUSTOM_SHADER_PATH': '${STUDIO_MAYA_VER}/mentalray/include',
-
     'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
     
-    'PYTHONPATH' : '${STUDIO_MAYA_VER}/beta/python',
+    'STUDIO_ICONS': '${STUDIO_MAYA}/icons',
+    
+    'PYTHONPATH': '${STUDIO_MAYA_DEPLOY}/python',
+    
+    'MAYA_MODULE_PATH' : '${STUDIO_MAYA}/modules',
+    'MAYA_PLUG_IN_PATH': { 'windows': '${STUDIO_MAYA}/modules/${MAYA_VERSION}-windows', },
+    'MAYA_PRESETS_PATH'    : '${STUDIO_MAYA}/presets',
+    
+    'STUDIO_SHELF_PATH': '${STUDIO_MAYA_DEPLOY}/shelves',
+    'STUDIO_MAYA_SCRIPT_PATH' : '${STUDIO_MAYA_DEPLOY}/scripts',
+        'STUDIO_MAYA_SCRIPT_STARTUP'  : '${STUDIO_MAYA_SCRIPT_PATH}/startup',
+        'STUDIO_MAYA_SCRIPT_OVERRIDES': '${STUDIO_MAYA_SCRIPT_PATH}/overrides',
+    
+    'MI_CUSTOM_SHADER_PATH': { 'windows': '${STUDIO_MAYA}/mentalray/${MAYA_VERSION}-windows/include', },
     },
 
-
-    'optional': { 'dev-user':
+'optional': { 'beta':
         {
-        'MAYA_DEV': '${USER_DEV}/mayaAppdir/${MAYA_VERSION}-x64-dev/dev',
-        'PATH': { 'darwin' : '${MAYA_DEV}',
-                  'linux'  : '${MAYA_DEV}',
-                  'windows': '${MAYA_DEV}', 
-        },
-        'PYTHONPATH' : '${MAYA_DEV}/python',
+        'CHANNEL': 'beta',
+        'STUDIO_MAYA_DEV': '${STUDIO_MAYA_VER}/${CHANNEL}',
 
-        'MAYA_SCRIPT_PATH'     : '${MAYA_DEV}/scripts',
-        'MAYA_SHELF_PATH'      : '${MAYA_DEV}/shelves',
-        'MAYA_SHELF_PATH'      : '${MAYA_DEV}/modules',
-        'XBMLANGPATH'          : '${MAYA_DEV}/icons',
-        'MAYA_PLUG_IN_PATH'    : '${MAYA_DEV}/plug-ins',
-        'MI_CUSTOM_SHADER_PATH': '${MAYA_DEV}/mentalray/include',
+        'PYTHONPATH' : '${STUDIO_MAYA_DEV}/python',
+        
+        'MAYA_MODULE_PATH'     : '${STUDIO_MAYA_DEV}/modules',
+        'MAYA_PLUG_IN_PATH'    : { 'windows': '${STUDIO_MAYA_DEV}/modules/${MAYA_VERSION}-windows', },
+        'MAYA_PRESETS_PATH'    : '${STUDIO_MAYA_DEV}/presets',
+        
+        'STUDIO_SHELF_PATH'      : '${STUDIO_MAYA_DEV}/shelves',
+        'STUDIO_MAYA_SCRIPT_PATH': '${STUDIO_MAYA_DEV}/scripts',
+            'STUDIO_MAYA_SCRIPT_STARTUP'  : '${STUDIO_MAYA_SCRIPT_PATH}/startup',
+            'STUDIO_MAYA_SCRIPT_OVERRIDES': '${STUDIO_MAYA_SCRIPT_PATH}/overrides',
         },
     },
+
+'optional': { 'dev-user':
+        {
+        'CHANNEL': 'dev-user',
+        'STUDIO_MAYA_DEV': '${USER_DEV}/maya/${MAYA_VERSION}-dev/dev',
+        
+        'PYTHONPATH' : '${STUDIO_MAYA_DEV}/python',
+        'MAYA_SCRIPT_PATH' : '${STUDIO_MAYA_DEV}/scripts',
+        'MAYA_SHELF_PATH'  : '${STUDIO_MAYA_DEV}/shelves',
+            'STUDIO_MAYA_SCRIPT_STARTUP'  : '${STUDIO_MAYA_DEV}/startup',
+            'STUDIO_MAYA_SCRIPT_OVERRIDES': '${STUDIO_MAYA_DEV}/overrides',
+#        'MAYA_MODULE_PATH' : '${STUDIO_MAYA_DEV}/modules',
+#        'MAYA_PLUG_IN_PATH': '${STUDIO_MAYA_DEV}/plug-ins',
+        },
+    },
+
 }
