renamed dev_user to dev

--- a/env/dev.env
+++ b/env/dev.env
@@ -2,13 +2,10 @@
 'tool': 'dev', 
 'version': '',
 'platforms': [ 'windows', 'linux', 'darwin' ],
-'requires': [],
+'requires': ['base'],
 'environment':
 	{
-	'PG_CMAKE_MODULE_PATH': '${ECO_ROOT}/dev/cmake',
-	'DEV_BUILDS': './build/${OSNAME}/${PG_BUILD_TYPE}/',
-	'DEV_DEPLOY': './build/${OSNAME}/Deploy/',
-	'RLM_ROOT': '${DEV_BASE}/pipeline/dev/rlm',
-	'PATH': { 'windows': '${DEV_BASE}/bin', },
+	'DEV_AREA': { 'windows': '${STUDIO_USER_HOME}/dev', },
+	'PATH': { 'windows': '${DEV_AREA}/bin', },
 	}
 }
