- added python base env

--- a/env/python_base.env
+++ b/env/python_base.env
@@ -5,8 +5,7 @@
 'requires': ['base'],
 'environment':
 	{
-	 'STUDIO_PYTHON_BASE': '${STUDIO_SW_BASE}/python',
-	 'STUDIO_PY_SITE_PACKAGES': '${STUDIO_PYTHON_BASE}/lib/site-packages',
+	 'STUDIO_PY_SITE_PACKAGES': '${STUDIO_PYTHON_BASE}',
 	 'PYTHONPATH': '${STUDIO_PY_SITE_PACKAGES}',
 	},
 }
