--- a/env/base.env
+++ b/env/base.env
@@ -8,14 +8,17 @@
     'OSNAME': {'darwin': '`uname -s`', 'linux': '`uname -s`', 'windows': 'Windows', 'strict': True, },
     'PATH': {
         'darwin': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
-        'linux': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin', 
+        'linux': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
          },
-    'STUDIO_SW_BASE': { 
+    'RS_SW_BASE': {
         'darwin' : '/base/sw',
         'linux'  : '/base/sw',
-        'windows': 'S:', 
+        'windows': 'S:',
         'strict': True,
         },
-    'STUDIO_USER_HOME': { 'windows':  '${STUDIO_SW_BASE}\dev_area\users\${USERNAME}' }
+    'RS_STUDIO_BASE':  '${RS_SW_BASE}/studio', # TODO: make this exist!
+    'RS_PYTHON_BASE': '${RS_SW_BASE}/python',
+    'RS_USER_HOME'   : { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}' },
+    'RS_USER_DEVAREA': { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}' },
     },
 }
