--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -2,15 +2,12 @@
 'tool': 'maya', 
 'version': '2015',
 'platforms': [ 'windows', 'linux', 'darwin' ],
-'requires': [ 'base', 'pythonBase' ],
+'requires': [ 'base' ],
 
-'environment':
-    {
-    'CHANNEL': 'beta', #should change to stable
+'environment': {
+    'RS_DEPARTMENT': 'POST',
     'MAYA_VERSION': '2015',
-    'STUDIO_MAYA': '${STUDIO_SW_BASE}/MayaAPPDIR',
-    'STUDIO_MAYA_DEPLOY' : '${STUDIO_MAYA}/${MAYA_VERSION}/${CHANNEL}', 
-    
+
     'MAYA_LOCATION': { 'darwin' : '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
                        'linux'  : '/usr/autodesk/maya${MAYA_VERSION}-x64',
                        'windows': 'C:/Program Files/Autodesk/Maya${MAYA_VERSION}', 
@@ -20,54 +17,93 @@
              'windows': '${MAYA_LOCATION}/bin;C:/Program Files/Common Files/Autodesk Shared/;C:/Program Files (x86)/Autodesk/Backburner/', 
     },
     'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
-    
-    'STUDIO_ICONS': '${STUDIO_MAYA}/icons',
-    
-    'PYTHONPATH': '${STUDIO_MAYA_DEPLOY}/python',
-    
-    'MAYA_MODULE_PATH' : '${STUDIO_MAYA}/modules',
-    'MAYA_PLUG_IN_PATH': { 'windows': '${STUDIO_MAYA}/modules/${MAYA_VERSION}-windows', },
-    'MAYA_PRESETS_PATH'    : '${STUDIO_MAYA}/presets',
-    
-    'STUDIO_SHELF_PATH': '${STUDIO_MAYA_DEPLOY}/shelves',
-    'STUDIO_MAYA_SCRIPT_PATH' : '${STUDIO_MAYA_DEPLOY}/scripts',
-        'STUDIO_MAYA_SCRIPT_STARTUP'  : '${STUDIO_MAYA_SCRIPT_PATH}/startup',
-        'STUDIO_MAYA_SCRIPT_OVERRIDES': '${STUDIO_MAYA_SCRIPT_PATH}/overrides',
-    
-    'MI_CUSTOM_SHADER_PATH': { 'windows': '${STUDIO_MAYA}/mentalray/${MAYA_VERSION}-windows/include', },
+     
+    'RS_STUDIO_MAYA': '${RS_SW_BASE}/MayaAPPDIR',
+     
+    'RS_STUDIO_ICONS': '${RS_STUDIO_MAYA}/icons',
+    'MAYA_PRESETS_PATH': '${RS_STUDIO_MAYA}/presets',
+     
+    'MAYA_MODULE_PATH' : '${RS_STUDIO_MAYA}/modules',
+    'MAYA_PLUG_IN_PATH': { 'windows': '${RS_STUDIO_MAYA}/modules/${MAYA_VERSION}-windows', },
+     
+    'MI_CUSTOM_SHADER_PATH': { 'windows': '${RS_STUDIO_MAYA}/mentalray/${MAYA_VERSION}-windows/include', },
     },
-
-'optional': { 'beta':
-        {
-        'CHANNEL': 'beta',
-        'STUDIO_MAYA_DEV': '${STUDIO_MAYA_VER}/${CHANNEL}',
-
-        'PYTHONPATH' : '${STUDIO_MAYA_DEV}/python',
-        
-        'MAYA_MODULE_PATH'     : '${STUDIO_MAYA_DEV}/modules',
-        'MAYA_PLUG_IN_PATH'    : { 'windows': '${STUDIO_MAYA_DEV}/modules/${MAYA_VERSION}-windows', },
-        'MAYA_PRESETS_PATH'    : '${STUDIO_MAYA_DEV}/presets',
-        
-        'STUDIO_SHELF_PATH'      : '${STUDIO_MAYA_DEV}/shelves',
-        'STUDIO_MAYA_SCRIPT_PATH': '${STUDIO_MAYA_DEV}/scripts',
-            'STUDIO_MAYA_SCRIPT_STARTUP'  : '${STUDIO_MAYA_SCRIPT_PATH}/startup',
-            'STUDIO_MAYA_SCRIPT_OVERRIDES': '${STUDIO_MAYA_SCRIPT_PATH}/overrides',
+'optional': { 
+    'stable': {
+            'CHANNEL': 'stable',
+            'RS_STUDIO_VERSION': 'S:/dev_area/studio/studio/v0000',
+            'RS_STUDIO_DEPLOY': '${RS_STUDIO_BASE}/${RS_STUDIO_VERSION}', 
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
         },
-    },
-
-'optional': { 'dev-user':
-        {
-        'CHANNEL': 'dev-user',
-        'STUDIO_MAYA_DEV': '${USER_DEV}/maya/${MAYA_VERSION}-dev/dev',
-        
-        'PYTHONPATH' : '${STUDIO_MAYA_DEV}/python',
-        'MAYA_SCRIPT_PATH' : '${STUDIO_MAYA_DEV}/scripts',
-        'MAYA_SHELF_PATH'  : '${STUDIO_MAYA_DEV}/shelves',
-            'STUDIO_MAYA_SCRIPT_STARTUP'  : '${STUDIO_MAYA_DEV}/startup',
-            'STUDIO_MAYA_SCRIPT_OVERRIDES': '${STUDIO_MAYA_DEV}/overrides',
-#        'MAYA_MODULE_PATH' : '${STUDIO_MAYA_DEV}/modules',
-#        'MAYA_PLUG_IN_PATH': '${STUDIO_MAYA_DEV}/plug-ins',
+    'beta': {
+            'CHANNEL': 'beta',
+            'RS_STUDIO_DEPLOY': 'S:/dev_area/studio/v0000',
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
         },
+    'dev': {
+            'CHANNEL': 'dev',
+            'RS_STUDIO_DEPLOY': '${DEV_AREA}/studio',
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
+        },
+    'devjc': {
+            'CHANNEL': 'dev',
+            'RS_STUDIO_DEPLOY': '${DEV_AREA}/studio',
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
+        },
+    
     },
-
 }
+
