--- a/env/maya_portable.env
+++ b/env/maya_portable.env
@@ -5,6 +5,7 @@
 'requires': ['base'],
 'environment':
     {
-    'MAYA_APP_DIR': '${STUDIO_USER_HOME}/maya/portable',
+    #'MAYA_APP_DIR': '${STUDIO_USER_HOME}/maya/portable',
+    'MAYA_APP_DIR': 'T:\_COMMON_SHARE\Freelancers\${USERNAME}'
     }
 }
