--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -14,7 +14,7 @@
     },
     'PATH': { 'darwin': '${MAYA_LOCATION}/bin',
                'linux': '${MAYA_LOCATION}/bin',
-             'windows': '${MAYA_LOCATION}/bin;C:/Program Files/Common Files/Autodesk Shared/;C:/Program Files (x86)/Autodesk/Backburner/', 
+             'windows': '${MAYA_LOCATION}/bin;C:/Program Files/Common Files/Autodesk Shared/;C:/Program Files (x86)/Autodesk/Backburner/;${MAYA_LOCATION}/Python/Lib/site-packages/pymel/tools/bin/', 
     },
     'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
      
@@ -22,20 +22,21 @@
      
     'RS_STUDIO_ICONS': '${RS_STUDIO_MAYA}/icons',
     'MAYA_PRESETS_PATH': '${RS_STUDIO_MAYA}/presets',
-     
+    
     'MAYA_MODULE_PATH' : '${RS_STUDIO_MAYA}/modules',
     'MAYA_PLUG_IN_PATH': { 'windows': '${RS_STUDIO_MAYA}/modules/${MAYA_VERSION}-windows', },
      
-    'MI_CUSTOM_SHADER_PATH': { 'windows': '${RS_STUDIO_MAYA}/mentalray/${MAYA_VERSION}-windows/include', },
+    'MI_CUSTOM_SHADER_PATH': { 'windows': '${RS_STUDIO_MAYA}/mentalray/win64-$MAYA_VERSION/include', },
     },
-'optional': { 
+'optional': {
     'stable': {
             'CHANNEL': 'stable',
-            'RS_STUDIO_VERSION': 'S:/dev_area/studio/studio/v0000',
-            'RS_STUDIO_DEPLOY': '${RS_STUDIO_BASE}/${RS_STUDIO_VERSION}', 
-            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher',
-            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python',
-            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel',
+            'RS_STUDIO_VERSION': 'v0000',
+
+            'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE}/dev_area/studio$/{RS_STUDIO_VERSION}', 
+            'RS_LAUNCHER'      : '${RS_STUDIO_DEPLOY}/launcher',
+            'RS_PY_TOOLS'      : '${RS_STUDIO_DEPLOY}/tools/python',
+            'RS_TOOLS_MEL'     : '${RS_STUDIO_DEPLOY}/tools/mel',
             
             
             'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
@@ -51,11 +52,13 @@
         },
     'beta': {
             'CHANNEL': 'beta',
-            'RS_STUDIO_DEPLOY': 'S:/dev_area/studio/v0000',
-            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
-            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
-            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
-            
+            'RS_STUDIO_VERSION': 'v0000',
+
+            'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE}/dev_area/studio$/${RS_STUDIO_VERSION}', 
+            'RS_LAUNCHER'      : '${RS_STUDIO_DEPLOY}/launcher',
+            'RS_PY_TOOLS'      : '${RS_STUDIO_DEPLOY}/tools/python',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel',
+             
             
             'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
             
@@ -70,6 +73,7 @@
     'dev': {
             'CHANNEL': 'dev',
             'RS_STUDIO_DEPLOY': '${DEV_AREA}/studio',
+
             'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
             'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
             'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
@@ -88,6 +92,7 @@
     'devjc': {
             'CHANNEL': 'dev',
             'RS_STUDIO_DEPLOY': '${DEV_AREA}/studio',
+
             'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
             'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
             'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
@@ -103,7 +108,25 @@
                 'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
             'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
         },
-    
+    'devht': {
+            'CHANNEL': 'dev',
+            'RS_STUDIO_DEPLOY': '${DEV_AREA}/studio',
+
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
+        },
     },
 }
 
