- add - PYTHONHOME var os redirection

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -16,6 +16,10 @@
                'linux': '${MAYA_LOCATION}/bin',
              'windows': '${MAYA_LOCATION}/bin;C:/Program Files/Common Files/Autodesk Shared/;C:/Program Files (x86)/Autodesk/Backburner/;${MAYA_LOCATION}/Python/Lib/site-packages/pymel/tools/bin/', 
     },
+    'PYTHONHOME': { 'darwin': '${MAYA_LOCATION}/Python',
+               'linux': '${MAYA_LOCATION}/Python',
+             'windows': '${MAYA_LOCATION}/Python', 
+    },
     'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
      
     'RS_STUDIO_MAYA': '${RS_SW_BASE}/MayaAPPDIR',
