- wip - env prototype for vred

--- a/env/vred_pro_2015.env
+++ b/env/vred_pro_2015.env
@@ -2,33 +2,39 @@
 'tool': 'vred-pro', 
 'version': '2015',
 'platforms': [ 'windows' ],
-'requires': [ 'base','pythonBase' ],
+'requires': [ 'base' ],
 
 'environment': {
-    'VRED_VERSION': '8.0',
-    'VRED_LOCATION': 'C:/Program Files/Autodesk/VREDPro${MAYA_VERSION}', 
+    'VRED_VERSION': '7.05',
+    'VRED_LOCATION': 'C:/Program Files/Autodesk/VREDPro-${VRED_VERSION}',
+    'VRED_EXE': '${VRED_LOCATION}/Bin/WIN64/VREDPro.exe',
     'PATH': '${VRED_LOCATION}/Bin/WIN64', 
-    'STUDIO_VRED': 'S:/dev_area/VRED',
      
     },
 'optional': { 
     'stable': {
             'CHANNEL': 'stable',
-            'STUDIO_VRED_VER': 'v000',
+            'STUDIO_VRED_VER': 'v0000',
             'STUDIO_VRED_DEPLOY': '${STUDIO_VRED}/${VRED_VERSION}/${CHANNEL}', 
             'PYTHONPATH': '${STUDIO_VRED_DEPLOY}/python',
         },
     'dev': {
             'CHANNEL': 'dev',
             'STUDIO_DEV': '${DEV_AREA}/studio',
-            
-            'STUDIO_VRED_STARTUP': '${STUDIO_DEV}/launchapps/vred',
+            'STUDIO_LAUNCHER': '${STUDIO_DEV}/launcher/src',
             'STUDIO_TOOLS_PYTHON': '${STUDIO_DEV}/tools/python/src',
+
+            'STUDIO_VRED_STARTUP': '${STUDIO_LAUNCHER}/RS/launch/vred/startup',
             
-            'PYTHONPATH' : '${STUDIO_TOOLS_PYTHON};${STUDIO_VRED_STARTUP}',
+            'RS_IACTIVE_TOOLS': '${STUDIO_DEV}/tools/python/src/iactive',
+            
+            'PYTHONPATH': 
+                '${STUDIO_VRED_STARTUP};'
+                '${RS_IACTIVE_TOOLS}/vred;'
+                '${RS_IACTIVE_TOOLS}/python;'
+                '${RS_IACTIVE_TOOLS}/maya;'
+                '${RS_IACTIVE_TOOLS}/maya/scripts',
         },
-    
     },
-    
 }
 
