- refactor - cleaned up variable names and consolidated maya2015 env - maya2015 env no longer has a dependency for dev user overrides, rather this now is dependant on if dev_<username> env is called

--- a/env/base.env
+++ b/env/base.env
@@ -9,6 +9,7 @@
     'PATH': {
         'darwin': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
         'linux': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
+#         'windows': '',
          },
     'RS_SW_BASE': {
         'darwin' : '/base/sw',
@@ -16,9 +17,8 @@
         'windows': 'S:',
         'strict': True,
         },
-    'RS_STUDIO_BASE':  '${RS_SW_BASE}/studio', # TODO: make this exist!
-    'RS_PYTHON_BASE': '${RS_SW_BASE}/python',
-    'RS_USER_HOME'   : { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}' },
-    'RS_USER_DEVAREA': { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}' },
+    'RS_STUDIO_BASE'  : { 'windows': '${RS_SW_BASE}/dev_area/studio', }, # TODO: define a concrete location!
+    'RS_USER_HOME'    : { 'windows': 'T:/_COMMON_SHARE/Freelancers/${USERNAME}', },
+    'RS_USER_DEV_HOME': { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}', },
     },
 }
