--- a/env/dev_ht.env
+++ b/env/dev_ht.env
@@ -1,11 +1,11 @@
 {
-'tool': 'devht', 
-'version': '',
+'tool': 'dev', 
+'version': 'ht',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': ['base'],
 'environment':
 	{
-	'DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/htariq/dev', },
-	'PATH': { 'windows': '${DEV_AREA}/bin', },
+	'RS_DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/htariq/dev', },
+	'PATH': { 'windows': '${RS_DEV_AREA}/bin', },
 	}
 }
