--- a/env/maya_portable.env
+++ b/env/maya_portable.env
@@ -1,11 +1,11 @@
 {
-'tool': 'mayaPortable', 
+'tool': 'mayaportable', 
 'version': '',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': ['base'],
 'environment':
     {
-    #'MAYA_APP_DIR': '${STUDIO_USER_HOME}/maya/portable',
-    'MAYA_APP_DIR': 'T:\_COMMON_SHARE\Freelancers\${USERNAME}'
+#     'MAYA_APP_DIR': '${RS_USER_HOME}/maya/portable', # TODO: support generation if "/maya/portable" doesn't exist
+    'MAYA_APP_DIR': '${RS_USER_HOME}',
     }
 }
