--- a/env/dept_iactive.env
+++ b/env/dept_iactive.env
@@ -5,12 +5,16 @@
 'requires': ['base', 'dev'],
 'environment':
 	{
+	'RS_DEPARTMENT': 'iactive',
 	'CHANNEL': 'iactive',
+	
 	'RS_IACTIVE_TOOLS': 'S:/dev_area/users/jcochrane/dev/studio/tools/python/src/iactive',
 	'RS_IACTIVE_SHELF': '${RS_IACTIVE_TOOLS}/maya/scripts/shelves',
-	'PYTHONPATH': '${RS_IACTIVE_TOOLS}/vred;'  \
-	'${RS_IACTIVE_TOOLS}/python;'  \
-	'${RS_IACTIVE_TOOLS}/maya;'  \
-	'${RS_IACTIVE_TOOLS}/maya/scripts',
+	
+	'PYTHONPATH': 
+		'${RS_IACTIVE_TOOLS}/vred;' \
+		'${RS_IACTIVE_TOOLS}/python;' \
+		'${RS_IACTIVE_TOOLS}/maya;' \
+		'${RS_IACTIVE_TOOLS}/maya/scripts',
 	},
 }
