- updated name from refactor
Includes:
- DEV_AREA >> RS_DEV_AREA
- maya >> mayapy
- mayaPortable >> mayaportable

--- a/env/maya_2013ext.env
+++ b/env/maya_2013ext.env
@@ -70,7 +70,7 @@
         },
     'dev': {
             'CHANNEL': 'dev',
-            'RS_STUDIO_DEPLOY': '${DEV_AREA}/studio',
+            'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
             'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
             'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
             'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
