--- a/env/vred_pro_2015.env
+++ b/env/vred_pro_2015.env
@@ -20,7 +20,7 @@
         },
     'dev': {
             'CHANNEL': 'dev',
-            'STUDIO_DEV': '${DEV_AREA}/studio',
+            'STUDIO_DEV': '${RS_DEV_AREA}/studio',
             'STUDIO_LAUNCHER': '${STUDIO_DEV}/launcher/src',
             'STUDIO_TOOLS_PYTHON': '${STUDIO_DEV}/tools/python/src',
 
