- minor updates and added beta and stable *.bats

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -40,7 +40,7 @@
     'MI_CUSTOM_SHADER_PATH': { 'windows': '${RS_STUDIO_MAYA}/mentalray/win64-$MAYA_VERSION/include', },
     
     
-    #--- Development redirection
+    #--- Release redirection
     
     'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
     
@@ -64,7 +64,7 @@
     'stable': {
         'CHANNEL': 'stable',
         
-        'RS_POST_VERSION': 'v0001',
+        'RS_POST_VERSION': 'v0000',
         'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE}/${RS_POST_VERSION}',
              'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher',
              'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python',
@@ -83,6 +83,7 @@
     
     'dev': {
         'CHANNEL': 'dev',
+        
         'MAYA_MODULE_PATH': '${RS_DEV_AREA}/maya/modules',
         
         'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
