- commented - RS_DEPARTMENT due to clash with same envvar in maya2015.env

--- a/env/dept_iactive.env
+++ b/env/dept_iactive.env
@@ -5,7 +5,7 @@
 'requires': ['base', 'dev'],
 'environment':
 	{
-	'RS_DEPARTMENT': 'iactive',
+	# 'RS_DEPARTMENT': 'iactive',
 	'CHANNEL': 'iactive',
 	
 	'RS_IACTIVE_TOOLS': 'S:/dev_area/users/jcochrane/dev/studio/tools/python/src/iactive',
