- updated vred env - still WIP

--- a/env/vred_pro_2015.env
+++ b/env/vred_pro_2015.env
@@ -9,31 +9,38 @@
     'VRED_LOCATION': 'C:/Program Files/Autodesk/VREDPro-${VRED_VERSION}',
     'VRED_EXE': '${VRED_LOCATION}/Bin/WIN64/VREDPro.exe',
     'PATH': '${VRED_LOCATION}/Bin/WIN64', 
-     
+    
+    'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_VRED}/env/lib/site-packages',
+    
+    'PYTHONPATH': 
+        '${RS_PY_SITE_PACKAGES};' \
+        '${RS_IACTIVE_TOOLS}/vred;'
+        '${RS_IACTIVE_TOOLS}/maya;'
+        '${RS_IACTIVE_TOOLS}/maya/scripts',
     },
+
 'optional': { 
     'stable': {
             'CHANNEL': 'stable',
-            'STUDIO_VRED_VER': 'v0000',
-            'STUDIO_VRED_DEPLOY': '${STUDIO_VRED}/${VRED_VERSION}/${CHANNEL}', 
-            'PYTHONPATH': '${STUDIO_VRED_DEPLOY}/python',
+            
+            'RS_IACTIVE_TOOLS': 'I:/tools',
+            
+            'RS_LAUNCHER_VRED' : '${RS_IACTIVE_TOOLS}/vred',
+            'RS_LAUNCHER_VRED_STARTUP' : '${RS_IACTIVE_TOOLS}/vred/vredStartup.py',
+            
+            'PYTHONPATH': '${RS_LAUNCHER_VRED}/vred',
         },
     'dev': {
             'CHANNEL': 'dev',
             'STUDIO_DEV': '${RS_DEV_AREA}/studio',
             'STUDIO_LAUNCHER': '${STUDIO_DEV}/launcher/src',
             'STUDIO_TOOLS_PYTHON': '${STUDIO_DEV}/tools/python/src',
-
+ 
             'STUDIO_VRED_STARTUP': '${STUDIO_LAUNCHER}/RS/launch/vred/startup',
-            
+             
             'RS_IACTIVE_TOOLS': '${STUDIO_DEV}/tools/python/src/iactive',
-            
-            'PYTHONPATH': 
-                '${STUDIO_VRED_STARTUP};'
-                '${RS_IACTIVE_TOOLS}/vred;'
-                '${RS_IACTIVE_TOOLS}/python;'
-                '${RS_IACTIVE_TOOLS}/maya;'
-                '${RS_IACTIVE_TOOLS}/maya/scripts',
+             
+
         },
     },
 }
