--- a/env/dept_iactive.env
+++ b/env/dept_iactive.env
@@ -5,10 +5,9 @@
 'requires': ['base', 'dev'],
 'environment':
 	{
-	# 'RS_DEPARTMENT': 'iactive',
-	'CHANNEL': 'iactive',
+	'RS_DEPARTMENT': 'iactive',
 	
-	'RS_IACTIVE_TOOLS': 'S:/dev_area/users/jcochrane/dev/studio/tools/python/src/iactive',
+	'RS_IACTIVE_TOOLS': 'I:/tools', # S:/iactive/tools
 	'RS_IACTIVE_SHELF': '${RS_IACTIVE_TOOLS}/maya/scripts/shelves',
 	
 	'PYTHONPATH': 
