- added - S:/dev_area/apps to PATH

--- a/env/dev.env
+++ b/env/dev.env
@@ -6,6 +6,6 @@
 'environment':
 	{
 	'RS_DEV_AREA': { 'windows': '${RS_USER_DEV_HOME}/dev', },
-	'PATH': { 'windows': '${RS_DEV_AREA}/bin', },
+	'PATH': { 'windows': 'S:/dev_area/apps', },
 	}
 }
