- hardcoded 'RS_LAUNCHER_MAYA' to 'post'

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -50,7 +50,7 @@
         '${RS_PY_SITE_PACKAGES};' \
         '${RS_PY_TOOLS};' \
         '${RS_LAUNCHER};' \
-        '${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+        '${RS_LAUNCHER_MAYA}/post',
     
     
     'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
