- add initial working version for VRED pro

--- a/env/vred_pro_2015.env
+++ b/env/vred_pro_2015.env
@@ -10,37 +10,46 @@
     'VRED_EXE': '${VRED_LOCATION}/Bin/WIN64/VREDPro.exe',
     'PATH': '${VRED_LOCATION}/Bin/WIN64', 
     
-    'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_VRED}/env/lib/site-packages',
+    
+        'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
+    'RS_LAUNCHER_VRED': '${RS_LAUNCHER}/RS/launch/vred',
+     'RS_VRED_STARTUP': '${RS_LAUNCHER_VRED}/startup',
+       'RS_VRED_SHELF': '${RS_IACTIVE_TOOLS}/vred/shelf',
+    
     
     'PYTHONPATH': 
         '${RS_PY_SITE_PACKAGES};' \
-        '${RS_IACTIVE_TOOLS}/vred;'
-        '${RS_IACTIVE_TOOLS}/maya;'
+        '${RS_IACTIVE_TOOLS}/python;' \
+        '${RS_IACTIVE_TOOLS}/vred;' \
+        '${RS_IACTIVE_TOOLS}/maya;' \
         '${RS_IACTIVE_TOOLS}/maya/scripts',
+    
+    'PATH': '${RS_LAUNCHER_VRED}'
     },
 
 'optional': { 
     'stable': {
-            'CHANNEL': 'stable',
-            
-            'RS_IACTIVE_TOOLS': 'I:/tools',
-            
-            'RS_LAUNCHER_VRED' : '${RS_IACTIVE_TOOLS}/vred',
-            'RS_LAUNCHER_VRED_STARTUP' : '${RS_IACTIVE_TOOLS}/vred/vredStartup.py',
-            
-            'PYTHONPATH': '${RS_LAUNCHER_VRED}/vred',
+#             'CHANNEL': 'stable',
+#             
+#             'RS_IACTIVE_TOOLS': 'I:/tools',
+#             
+#             'RS_LAUNCHER_VRED' : '${RS_IACTIVE_TOOLS}/vred',
+#             'RS_LAUNCHER_VRED_STARTUP' : '${RS_IACTIVE_TOOLS}/vred/vredStartup.py',
+#             
         },
     'dev': {
             'CHANNEL': 'dev',
-            'STUDIO_DEV': '${RS_DEV_AREA}/studio',
-            'STUDIO_LAUNCHER': '${STUDIO_DEV}/launcher/src',
-            'STUDIO_TOOLS_PYTHON': '${STUDIO_DEV}/tools/python/src',
- 
-            'STUDIO_VRED_STARTUP': '${STUDIO_LAUNCHER}/RS/launch/vred/startup',
-             
-            'RS_IACTIVE_TOOLS': '${STUDIO_DEV}/tools/python/src/iactive',
-             
-
+            
+               'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
+               'RS_IACTIVE_TOOLS': 'I:/tools',
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_VRED}/env/py2.7.8x32/lib/site-packages',
+        },
+    'devjc': {
+            'CHANNEL': 'dev',
+            
+               'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
+               'RS_IACTIVE_TOOLS': '${RS_STUDIO_DEPLOY}/tools/python/src/iactive',
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_VRED}/env/py2.7.8x32/lib/site-packages',
         },
     },
 }
