- renamed env key - RS_USER_DEV_HOME >> RS_USER_HOME_DEV

--- a/env/dev.env
+++ b/env/dev.env
@@ -5,7 +5,7 @@
 'requires': ['base'],
 'environment':
 	{
-	'RS_DEV_AREA': { 'windows': '${RS_USER_DEV_HOME}/dev', },
-	'PATH': { 'windows': 'S:/dev_area/apps', },
+	'RS_DEV_AREA': { 'windows': '${RS_USER_HOME_DEV}/dev', },
+	'PATH': { 'windows': '${RS_DEV_AREA}/bin', },
 	}
 }
