--- a/env/base.env
+++ b/env/base.env
@@ -3,6 +3,7 @@
 'version': '',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': [],
+
 'environment':
     {
     'OSNAME': {'darwin': '`uname -s`', 'linux': '`uname -s`', 'windows': 'Windows', 'strict': True, },
@@ -19,6 +20,6 @@
         },
     'RS_STUDIO_BASE'  : { 'windows': '${RS_SW_BASE}/dev_area/studio', }, # TODO: define a concrete location!
     'RS_USER_HOME'    : { 'windows': 'T:/_COMMON_SHARE/Freelancers/${USERNAME}', },
-    'RS_USER_DEV_HOME': { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}', },
+    'RS_USER_HOME_DEV': { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}', },
     },
 }
