--- a/env/maya_shotfinder.env
+++ b/env/maya_shotfinder.env
@@ -5,8 +5,9 @@
 'requires': ['base'],
 'environment':
     {
+        'RS_DEPARTMENT': 'POST',
         'CHANNEL': 'dev',
-        'RS_STUDIO_DEPLOY': 'S:/dev_area/studio/shotfinder',
+        'RS_STUDIO_DEPLOY': 'S:/dev_area/users/jcochrane/dev/shotfinder/studio',
 
         'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
         'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
@@ -22,5 +23,27 @@
             'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
             'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
         'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
-    }
+    },
+'optional': {
+    'alpha': {
+            'CHANNEL': 'alpha',
+
+            'RS_STUDIO_DEPLOY' : 'S:/dev_area/users/jcochrane/dev/shotfinder-alpha/studio', 
+            'RS_LAUNCHER'      : '${RS_STUDIO_DEPLOY}/launcher',
+            'RS_PY_TOOLS'      : '${RS_STUDIO_DEPLOY}/tools/python',
+            'RS_TOOLS_MEL'     : '${RS_STUDIO_DEPLOY}/tools/mel',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
+        },
+    },
 }
