--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -8,30 +8,28 @@
     'RS_DEPARTMENT': 'POST',
     'MAYA_VERSION': '2015',
     
-    
-    'MAYA_LOCATION': { 'darwin' : '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
-                       'linux'  : '/usr/autodesk/maya${MAYA_VERSION}-x64',
-                       'windows': 'C:/Program Files/Autodesk/Maya${MAYA_VERSION}', 
+    'MAYA_LOCATION': { 
+        'darwin' : '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
+        'linux'  : '/usr/autodesk/maya${MAYA_VERSION}-x64',
+        'windows': 'C:/Program Files/Autodesk/Maya${MAYA_VERSION}', 
     },
-    'PATH': { 'darwin': '${MAYA_LOCATION}/bin',
-               'linux': '${MAYA_LOCATION}/bin',
-             'windows': 
-                '${MAYA_LOCATION}/bin;' \
-                'C:/Program Files/Common Files/Autodesk Shared/;' \
-                'C:/Program Files (x86)/Autodesk/Backburner/;' \
-                '${MAYA_LOCATION}/Python/Lib/site-packages/pymel/tools/bin/', 
+    'PATH': { 
+         'darwin': '${MAYA_LOCATION}/bin',
+          'linux': '${MAYA_LOCATION}/bin',
+        'windows': '${MAYA_LOCATION}/bin;' \
+                     'C:/Program Files/Common Files/Autodesk Shared/;' \
+                     'C:/Program Files (x86)/Autodesk/Backburner/;' \
+                     '${MAYA_LOCATION}/Python/Lib/site-packages/pymel/tools/bin/', 
     },
-    'PYTHONHOME': { 'darwin': '${MAYA_LOCATION}/Python',
-               'linux': '${MAYA_LOCATION}/Python',
-             'windows': '${MAYA_LOCATION}/Python', 
+    'PYTHONHOME': { 
+         'darwin': '${MAYA_LOCATION}/Python',
+          'linux': '${MAYA_LOCATION}/Python',
+        'windows': '${MAYA_LOCATION}/Python', 
     },
     'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
      
-     
-     #--- Studio Deploy
-    'RS_STUDIO_MAYA': '${RS_SW_BASE}/MayaAPPDIR',
-     
-    'RS_STUDIO_ICONS': '${RS_STUDIO_MAYA}/icons',
+    'RS_STUDIO_MAYA':    '${RS_SW_BASE}/MayaAPPDIR',
+    'RS_STUDIO_ICONS':   '${RS_STUDIO_MAYA}/icons',
     'MAYA_PRESETS_PATH': '${RS_STUDIO_MAYA}/presets',
     
     'MAYA_MODULE_PATH' : '${RS_STUDIO_MAYA}/modules',
