--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -36,61 +36,126 @@
     'MAYA_PLUG_IN_PATH': { 'windows': '${RS_STUDIO_MAYA}/modules/${MAYA_VERSION}-windows', },
      
     'MI_CUSTOM_SHADER_PATH': { 'windows': '${RS_STUDIO_MAYA}/mentalray/win64-$MAYA_VERSION/include', },
-    
-    
-    #--- Release redirection
-    
-    'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
-    
-    'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
-    
-    'PYTHONPATH': 
-        '${RS_PY_SITE_PACKAGES};' \
-        '${RS_PY_TOOLS};' \
-        '${RS_LAUNCHER};' \
-        '${RS_LAUNCHER_MAYA}/post',
-    
-    
-    'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
-        'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
-        'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
-    'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves',
-    
     },
-
+    
 'optional': {
     'stable': {
-        'CHANNEL': 'stable',
-        
-        'RS_POST_VERSION': 'v0000',
-        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE}/${RS_POST_VERSION}',
-             'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher',
-             'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python',
-            'RS_TOOLS_MEL' : '${RS_STUDIO_DEPLOY}/tools/mel',
+            'CHANNEL': 'stable',
+            'RS_STUDIO_VERSION': 'v0002',
+            'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE}/${RS_STUDIO_VERSION}', 
+            
+            'RS_LAUNCHER'      : '${RS_STUDIO_DEPLOY}/launcher',
+            'RS_PY_TOOLS'      : '${RS_STUDIO_DEPLOY}/tools/python',
+            'RS_TOOLS_MEL'     : '${RS_STUDIO_DEPLOY}/tools/mel',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
         },
-    
     'beta': {
-        'CHANNEL': 'beta',
-        
-        'RS_POST_VERSION': 'v0002',
-        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE}/${RS_POST_VERSION}',
-             'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher',
-             'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python',
-            'RS_TOOLS_MEL' : '${RS_STUDIO_DEPLOY}/tools/mel',   
+            'CHANNEL': 'beta',
+            'RS_STUDIO_VERSION': 'v0002',
+            'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE}/${RS_STUDIO_VERSION}',
+            
+            'RS_LAUNCHER'      : '${RS_STUDIO_DEPLOY}/launcher',
+            'RS_PY_TOOLS'      : '${RS_STUDIO_DEPLOY}/tools/python',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel',
+             
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
         },
-    
+    'alpha': {
+            'CHANNEL': 'alpha',
+            'RS_STUDIO_DEPLOY' : 'S:/dev_area/studio-alpha',
+
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
+        },
     'dev': {
-        'CHANNEL': 'dev',
-        
-        'MAYA_MODULE_PATH': '${RS_DEV_AREA}/maya/modules',
-        
-        'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
-            'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-            'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src',
-           'RS_TOOLS_MEL' : '${RS_STUDIO_DEPLOY}/tools/mel/src',
-        
+            'CHANNEL': 'dev',
+            'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
+
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
         },
-    
+    'devjc': {
+            'CHANNEL': 'dev',
+            'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
+
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
+        },
+    'devht': {
+            'CHANNEL': 'dev',
+            'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
+
+            'RS_LAUNCHER'     : '${RS_STUDIO_DEPLOY}/launcher/src',
+            'RS_PY_TOOLS'     : '${RS_STUDIO_DEPLOY}/tools/python/src',
+            'RS_TOOLS_MEL'    : '${RS_STUDIO_DEPLOY}/tools/mel/src',
+            
+            
+            'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
+            
+            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
+            'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+            
+            'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
+                'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
+                'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
+            'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves'
+        },
     },
 }
 
