--- a/env/maya_portable.env
+++ b/env/maya_portable.env
@@ -5,7 +5,7 @@
 'requires': ['base'],
 'environment':
     {
-#     'MAYA_APP_DIR': '${RS_USER_HOME}/maya/portable', # TODO: support generation if "/maya/portable" doesn't exist
-    'MAYA_APP_DIR': '${RS_USER_HOME}',
+    #'MAYA_APP_DIR': '${STUDIO_USER_HOME}/maya/portable',
+    'MAYA_APP_DIR': 'T:\_COMMON_SHARE\Freelancers\${USERNAME}'
     }
 }
