--- a/env/octane_2_23_2.env
+++ b/env/octane_2_23_2.env
@@ -1,28 +1,18 @@
 {
-'tool': 'mayaOctane', 
-'version': '23277',
+'tool': 'eclipse-luna', 
+'version': '',
 'platforms': [ 'windows', 'linux', 'darwin' ],
-'requires': [ 'base','maya' ],
-'environment':
-	{
-	'MTOA': '${PG_SW_BASE}/solidangle/mtoa_${MAYA_VERSION}_${MTOA_VERSION}',
-	'MTOA_VERSION': '0.25.3',
-	'MAYA_RENDER_DESC_PATH': '${MTOA}',
-	'MTOA_EXTENSIONS_PATH': { 'darwin': '${MTOA}/extensions', 
-								'linux': '${MTOA}/extensions',
-								'windows': '${MTOA}/extensions', },
-	'MTOA_EXTENSIONS': { 'darwin': '${MTOA}/extensions', 
-								'linux': '${MTOA}/extensions',
-								'windows': '${MTOA}/extensions', },
-	'MAYA_MODULE_PATH': '${MTOA}',
-	'ARNOLD_PLUGIN_PATH': '${MTOA}/shaders',
-	'DYLD_LIBRARY_PATH': { 'darwin': '${MTOA}/bin', },
-	'PATH': { 'windows': '${MTOA}/bin', },
-	},
-	'optional': { 'dev':
-					{
-	'MTOA_EXTENSIONS_PATH': '${DEV_BUILDS}',
-	'MTOA_EXTENSIONS': '${DEV_BUILDS}',
-					},
-				 },
+'requires': [ 'base' ],
+
+'environment': {
+    'ECLIPSE_VERSION': 'luna',
+
+	'ECLIPSE_LOCATION': { 'windows': '${RS_USER_DEVAREA}/apps/eclipse/${ECLIPSE_VERSION}',},
+	'PATH': { 'windows': '${ECLIPSE_LOCATION}',}, 
+	
+	'RS_USER_DEV_WORKSPACE': '${RS_USER_DEVAREA}/workspace',
+
+    },
+    
 }
+
