--- a/env/vred_pro_2015.env
+++ b/env/vred_pro_2015.env
@@ -2,55 +2,33 @@
 'tool': 'vred-pro', 
 'version': '2015',
 'platforms': [ 'windows' ],
-'requires': [ 'base' ],
+'requires': [ 'base','pythonBase' ],
 
 'environment': {
-    'VRED_VERSION': '7.05',
-    'VRED_LOCATION': 'C:/Program Files/Autodesk/VREDPro-${VRED_VERSION}',
-    'VRED_EXE': '${VRED_LOCATION}/Bin/WIN64/VREDPro.exe',
+    'VRED_VERSION': '8.0',
+    'VRED_LOCATION': 'C:/Program Files/Autodesk/VREDPro${MAYA_VERSION}', 
     'PATH': '${VRED_LOCATION}/Bin/WIN64', 
-    
-    
-        'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-    'RS_LAUNCHER_VRED': '${RS_LAUNCHER}/RS/launch/vred',
-     'RS_VRED_STARTUP': '${RS_LAUNCHER_VRED}/startup',
-       'RS_VRED_SHELF': '${RS_IACTIVE_TOOLS}/vred/shelf',
-    
-    
-    'PYTHONPATH': 
-        '${RS_PY_SITE_PACKAGES};' \
-        '${RS_IACTIVE_TOOLS}/python;' \
-        '${RS_IACTIVE_TOOLS}/vred;' \
-        '${RS_IACTIVE_TOOLS}/maya;' \
-        '${RS_IACTIVE_TOOLS}/maya/scripts',
-    
-    'PATH': '${RS_LAUNCHER_VRED}'
+    'STUDIO_VRED': 'S:/dev_area/VRED',
+     
     },
-
 'optional': { 
     'stable': {
-#             'CHANNEL': 'stable',
-#             
-#             'RS_IACTIVE_TOOLS': 'I:/tools',
-#             
-#             'RS_LAUNCHER_VRED' : '${RS_IACTIVE_TOOLS}/vred',
-#             'RS_LAUNCHER_VRED_STARTUP' : '${RS_IACTIVE_TOOLS}/vred/vredStartup.py',
-#             
+            'CHANNEL': 'stable',
+            'STUDIO_VRED_VER': 'v000',
+            'STUDIO_VRED_DEPLOY': '${STUDIO_VRED}/${VRED_VERSION}/${CHANNEL}', 
+            'PYTHONPATH': '${STUDIO_VRED_DEPLOY}/python',
         },
     'dev': {
             'CHANNEL': 'dev',
+            'STUDIO_DEV': '${DEV_AREA}/studio',
             
-               'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
-               'RS_IACTIVE_TOOLS': 'I:/tools',
-            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_VRED}/env/py2.7.8x32/lib/site-packages',
-        },
-    'devjc': {
-            'CHANNEL': 'dev',
+            'STUDIO_VRED_STARTUP': '${STUDIO_DEV}/launchapps/vred',
+            'STUDIO_TOOLS_PYTHON': '${STUDIO_DEV}/tools/python/src',
             
-               'RS_STUDIO_DEPLOY': '${RS_DEV_AREA}/studio',
-               'RS_IACTIVE_TOOLS': '${RS_STUDIO_DEPLOY}/tools/python/src/iactive',
-            'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_VRED}/env/py2.7.8x32/lib/site-packages',
+            'PYTHONPATH' : '${STUDIO_TOOLS_PYTHON};${STUDIO_VRED_STARTUP}',
         },
+    
     },
+    
 }
 
