--- a/env/assetlib.env
+++ b/env/assetlib.env
@@ -1,8 +1,8 @@
 {
-'tool': 'beta', 
+'tool': 'assetlib', 
 'version': '',
 'platforms': [ 'windows', 'linux', 'darwin' ],
-'requires': ['base'],
+'requires': ['base', 'maya2015'],
 'environment':
 	{
 	}
