--- a/env/dev_is.env
+++ b/env/dev_is.env
@@ -1,11 +1,11 @@
 {
-'tool': 'devht', 
+'tool': 'devis', 
 'version': '',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': ['base'],
 'environment':
 	{
-	'DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/htariq/dev', },
+	'DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/isaleh/dev', },
 	'PATH': { 'windows': '${DEV_AREA}/bin', },
 	}
 }
