--- a/env/mtoa_1_2_4.env
+++ b/env/mtoa_1_2_4.env
@@ -1,28 +1,25 @@
 {
 'tool': 'mtoa', 
-'version': '1.1.2',
+'version': '1.2.4',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': [ 'maya' ],
 'environment':
 	{
-	'MTOA_VERSION': '1.1.2.2',
+	'MTOA_VERSION': '1.2.4.3',
 
 	'MTOA': 'S:/dev_area/solidangle/mtoa/${MTOA_VERSION}/${MAYA_VERSION}',
     'MAYA_PLUG_IN_PATH': { 'windows': '${MTOA}/plug-ins', },
-	'MAYA_RENDER_DESC_PATH': '${MTOA}',
-	'ARNOLD_PLUGIN_PATH': '${MTOA}/shaders',
-	'PATH': { 'windows': '${MTOA}/bin', },
-	'PYTHONPATH': { 'windows': '${MTOA}/scripts', },
-
-
+#	'MAYA_RENDER_DESC_PATH': '${MTOA}',
 #	'MTOA_EXTENSIONS_PATH': { 'darwin': '${MTOA}/extensions', 
 #	                           'linux': '${MTOA}/extensions',
 #	                         'windows': '${MTOA}/extensions', },
 #	'MTOA_EXTENSIONS': { 'darwin': '${MTOA}/extensions', 
 #	                      'linux': '${MTOA}/extensions',
 #	                    'windows': '${MTOA}/extensions', },
+	'ARNOLD_PLUGIN_PATH': '${MTOA}/shaders',
 #	'DYLD_LIBRARY_PATH': { 'darwin': '${MTOA}/bin', },
-
+	'PATH': { 'windows': '${MTOA}/bin', },
+	'PYTHONPATH': { 'windows': '${MTOA}/scripts', },
 	},
 
 #	'optional': 
