--- a/env/base.env
+++ b/env/base.env
@@ -7,11 +7,9 @@
 'environment':
     {
     'OSNAME': {'darwin': '`uname -s`', 'linux': '`uname -s`', 'windows': 'Windows', 'strict': True, },
-    'PATH': {
-        'darwin': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
-        'linux': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
-#         'windows': '',
-         },
+    'PATH': { 'darwin': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
+               'linux': '/usr/local/bin:/usr/local/sbin:/usr/local/mysql/bin:/usr/share/bin',
+             'windows': '', },
     'RS_SW_BASE': {
         'darwin' : '/base/sw',
         'linux'  : '/base/sw',
@@ -20,6 +18,6 @@
         },
     'RS_STUDIO_BASE'  : { 'windows': '${RS_SW_BASE}/dev_area/studio', }, # TODO: define a concrete location!
     'RS_USER_HOME'    : { 'windows': 'T:/_COMMON_SHARE/Freelancers/${USERNAME}', },
-    'RS_USER_HOME_DEV': { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}', },
-    },
+    'RS_USER_DEV_HOME': { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}', },
+    }
 }
