--- a/env/mtoa_1_2_4.env
+++ b/env/mtoa_1_2_4.env
@@ -4,29 +4,33 @@
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': [ 'maya' ],
 'environment':
-	{
-	'MTOA_VERSION': '1.2.4.3',
+    {
+    'MTOA_VERSION': '1.2.4.3',
 
-	'MTOA': 'S:/dev_area/solidangle/mtoa/${MTOA_VERSION}/${MAYA_VERSION}',
+    'MTOA': 'S:/dev_area/solidangle/mtoa/${MTOA_VERSION}/${MAYA_VERSION}',
     'MAYA_PLUG_IN_PATH': { 'windows': '${MTOA}/plug-ins', },
-#	'MAYA_RENDER_DESC_PATH': '${MTOA}',
-#	'MTOA_EXTENSIONS_PATH': { 'darwin': '${MTOA}/extensions', 
-#	                           'linux': '${MTOA}/extensions',
-#	                         'windows': '${MTOA}/extensions', },
-#	'MTOA_EXTENSIONS': { 'darwin': '${MTOA}/extensions', 
-#	                      'linux': '${MTOA}/extensions',
-#	                    'windows': '${MTOA}/extensions', },
-	'ARNOLD_PLUGIN_PATH': '${MTOA}/shaders',
-#	'DYLD_LIBRARY_PATH': { 'darwin': '${MTOA}/bin', },
-	'PATH': { 'windows': '${MTOA}/bin', },
-	'PYTHONPATH': { 'windows': '${MTOA}/scripts', },
-	},
+    
+    'ARNOLD_PLUGIN_PATH': '${MTOA}/shaders',
+    
+    'PYTHONPATH': { 'windows': '${MTOA}/scripts', },
+    'MAYA_RENDER_DESC_PATH': '${MTOA}',
+    'PATH': { 'windows': '${MTOA}/bin', },
+    
+#    'MTOA_EXTENSIONS_PATH': { 'darwin': '${MTOA}/extensions', 
+#                               'linux': '${MTOA}/extensions',
+#                             'windows': '${MTOA}/extensions', },
+#    'MTOA_EXTENSIONS': { 'darwin': '${MTOA}/extensions', 
+#                          'linux': '${MTOA}/extensions',
+#                        'windows': '${MTOA}/extensions', },
 
-#	'optional': 
-#	{ 'dev': 
-#		{
-#		'MTOA_EXTENSIONS_PATH': '${DEV_BUILDS}',
-#		'MTOA_EXTENSIONS': '${DEV_BUILDS}',
-#		},
-#	},
+#    'DYLD_LIBRARY_PATH': { 'darwin': '${MTOA}/bin', },
+    },
+
+#    'optional': 
+#    { 'dev': 
+#        {
+#        'MTOA_EXTENSIONS_PATH': '${DEV_BUILDS}',
+#        'MTOA_EXTENSIONS': '${DEV_BUILDS}',
+#        },
+#    },
 }
