--- a/env/octane_2_23_2.env
+++ b/env/octane_2_23_2.env
@@ -1,18 +1,12 @@
 {
-'tool': 'eclipse-luna', 
+'tool': 'octane', 
 'version': '',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': [ 'base' ],
 
 'environment': {
-    'ECLIPSE_VERSION': 'luna',
-
-	'ECLIPSE_LOCATION': { 'windows': '${RS_USER_DEVAREA}/apps/eclipse/${ECLIPSE_VERSION}',},
+    'OCTANE_VERSION': '2.23.2',
 	'PATH': { 'windows': '${ECLIPSE_LOCATION}',}, 
-	
-	'RS_USER_DEV_WORKSPACE': '${RS_USER_DEVAREA}/workspace',
-
     },
-    
 }
 
