--- a/env/dev.env
+++ b/env/dev.env
@@ -5,7 +5,10 @@
 'requires': ['base'],
 'environment':
 	{
-	'RS_DEV_AREA': { 'windows': '${RS_USER_HOME_DEV}/dev', },
-	'PATH': { 'windows': '${RS_DEV_AREA}/bin', },
+	'RS_USER_DEV_AREA': { 'windows': '${RS_USER_DEV_HOME}/dev', },
+	
+	'CHANNEL': 'dev',
+	'RS_STUDIO_DEPLOY': '${RS_USER_DEV_AREA}/studio',
+	'PATH': { 'windows': '${RS_USER_DEV_AREA}/bin', },
 	}
 }
