--- a/env/dev_is.env
+++ b/env/dev_is.env
@@ -1,11 +1,12 @@
 {
-'tool': 'devis', 
-'version': '',
+'tool': 'dev', 
+'version': 'is',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': ['base'],
+
 'environment':
 	{
-	'DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/isaleh/dev', },
-	'PATH': { 'windows': '${DEV_AREA}/bin', },
+	'RS_USER_DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/isaleh/dev', },
+	'PATH': { 'windows': '${RS_USER_DEV_AREA}/bin', },
 	}
 }
