--- a/env/dev_jc.env
+++ b/env/dev_jc.env
@@ -6,7 +6,10 @@
 
 'environment':
     {
-    'RS_DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/jcochrane/dev', },
-    'PATH': { 'windows': '${RS_DEV_AREA}/bin', },
+    'RS_USER_DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/jcochrane/dev', },
+    
+    'CHANNEL': 'dev',
+    'RS_STUDIO_DEPLOY': '${RS_USER_DEV_AREA}/studio',
+    'PATH': { 'windows': '${RS_USER_DEV_AREA}/bin', },
     }
 }
