--- a/env/dev_jh.env
+++ b/env/dev_jh.env
@@ -1,11 +1,12 @@
 {
-'tool': 'devjh', 
-'version': '',
+'tool': 'dev', 
+'version': 'jh',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': ['base'],
+
 'environment':
 	{
 	'DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/jhenare/dev', },
-	'PATH': { 'windows': '${DEV_AREA}/bin', },
+	'PATH': { 'windows': '${RS_USER_DEV_AREA}/bin', },
 	}
 }
