--- a/env/dev_pr.env
+++ b/env/dev_pr.env
@@ -1,11 +1,15 @@
 {
-'tool': 'devpr', 
-'version': '',
+'tool': 'dev', 
+'version': 'pr',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': ['base'],
+
 'environment':
 	{
 	'DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/pramji/dev', },
-	'PATH': { 'windows': '${DEV_AREA}/bin', },
+	
+	'CHANNEL': 'dev',
+	'RS_STUDIO_DEPLOY': '${RS_USER_DEV_AREA}/studio',
+	'PATH': { 'windows': '${RS_USER_DEV_AREA}/bin', },
 	}
 }
