--- a/env/mtoa_1_1_2.env
+++ b/env/mtoa_1_1_2.env
@@ -4,32 +4,35 @@
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': [ 'maya' ],
 'environment':
-	{
-	'MTOA_VERSION': '1.1.2.2',
+    {
+    'MTOA_VERSION': '1.1.2.2',
 
-	'MTOA': 'S:/dev_area/solidangle/mtoa/${MTOA_VERSION}/${MAYA_VERSION}',
+    'MTOA': {'darwin': 'S:/dev_area/solidangle/mtoa/${MTOA_VERSION}-darwin/${MAYA_VERSION}',
+              'linux': 'S:/dev_area/solidangle/mtoa/${MTOA_VERSION}-linux/${MAYA_VERSION}',
+            'windows': 'S:/dev_area/solidangle/mtoa/${MTOA_VERSION}-windows/${MAYA_VERSION}' },
+
     'MAYA_PLUG_IN_PATH': { 'windows': '${MTOA}/plug-ins', },
-	'MAYA_RENDER_DESC_PATH': '${MTOA}',
-	'ARNOLD_PLUGIN_PATH': '${MTOA}/shaders',
-	'PATH': { 'windows': '${MTOA}/bin', },
-	'PYTHONPATH': { 'windows': '${MTOA}/scripts', },
+    'MAYA_RENDER_DESC_PATH': '${MTOA}',
+    'ARNOLD_PLUGIN_PATH': '${MTOA}/shaders',
+    'PATH': { 'windows': '${MTOA}/bin', },
+    'PYTHONPATH': { 'windows': '${MTOA}/scripts', },
 
 
-#	'MTOA_EXTENSIONS_PATH': { 'darwin': '${MTOA}/extensions', 
-#	                           'linux': '${MTOA}/extensions',
-#	                         'windows': '${MTOA}/extensions', },
-#	'MTOA_EXTENSIONS': { 'darwin': '${MTOA}/extensions', 
-#	                      'linux': '${MTOA}/extensions',
-#	                    'windows': '${MTOA}/extensions', },
-#	'DYLD_LIBRARY_PATH': { 'darwin': '${MTOA}/bin', },
+#    'MTOA_EXTENSIONS_PATH': { 'darwin': '${MTOA}/extensions', 
+#                               'linux': '${MTOA}/extensions',
+#                             'windows': '${MTOA}/extensions', },
+#    'MTOA_EXTENSIONS': { 'darwin': '${MTOA}/extensions', 
+#                          'linux': '${MTOA}/extensions',
+#                        'windows': '${MTOA}/extensions', },
+#    'DYLD_LIBRARY_PATH': { 'darwin': '${MTOA}/bin', },
 
-	},
+    },
 
-#	'optional': 
-#	{ 'dev': 
-#		{
-#		'MTOA_EXTENSIONS_PATH': '${DEV_BUILDS}',
-#		'MTOA_EXTENSIONS': '${DEV_BUILDS}',
-#		},
-#	},
+#    'optional': 
+#    { 'dev': 
+#        {
+#        'MTOA_EXTENSIONS_PATH': '${DEV_BUILDS}',
+#        'MTOA_EXTENSIONS': '${DEV_BUILDS}',
+#        },
+#    },
 }
