- cleaned up envVar typos

--- a/env/mtoa_1_1_2.env
+++ b/env/mtoa_1_1_2.env
@@ -3,6 +3,7 @@
 'version': '1.1.2',
 'platforms': [ 'windows', 'linux', 'darwin' ],
 'requires': [ 'maya' ],
+
 'environment':
     {
     'MTOA_VERSION': '1.1.2.2',
@@ -18,21 +19,14 @@
     'PYTHONPATH': { 'windows': '${MTOA}/scripts', },
 
 
-#    'MTOA_EXTENSIONS_PATH': { 'darwin': '${MTOA}/extensions', 
-#                               'linux': '${MTOA}/extensions',
-#                             'windows': '${MTOA}/extensions', },
-#    'MTOA_EXTENSIONS': { 'darwin': '${MTOA}/extensions', 
-#                          'linux': '${MTOA}/extensions',
-#                        'windows': '${MTOA}/extensions', },
-#    'DYLD_LIBRARY_PATH': { 'darwin': '${MTOA}/bin', },
+    'MTOA_EXTENSIONS_PATH': { 'darwin': '${MTOA}/extensions', 
+                               'linux': '${MTOA}/extensions',
+                             'windows': '${MTOA}/extensions', },
+    'MTOA_EXTENSIONS': { 'darwin': '${MTOA}/extensions', 
+                          'linux': '${MTOA}/extensions',
+                        'windows': '${MTOA}/extensions', },
+    'DYLD_LIBRARY_PATH': { 'darwin': '${MTOA}/bin', },
 
     },
 
-#    'optional': 
-#    { 'dev': 
-#        {
-#        'MTOA_EXTENSIONS_PATH': '${DEV_BUILDS}',
-#        'MTOA_EXTENSIONS': '${DEV_BUILDS}',
-#        },
-#    },
 }
