- changed $RS_SW_BASE to look at S:/dev_area/Applications - previous lookups to $RS_SW_BASE changed to full path - S:/..

--- a/env/base.env
+++ b/env/base.env
@@ -13,11 +13,15 @@
     'RS_SW_BASE': {
         'darwin' : '/base/sw',
         'linux'  : '/base/sw',
-        'windows': 'S:',
+        'windows': 'S:/dev_area/Applications',
         'strict': True,
         },
-    'RS_STUDIO_BASE'  : { 'windows': '${RS_SW_BASE}/dev_area/studio', }, # TODO: define a concrete location!
+    'RS_STUDIO_BASE'    : { 'windows': 'S:/dev_area/studio', }, # TODO: define a concrete location!
+    'RS_STUDIO_BASE_DEV': { 'windows': 'S:/dev_area/production-dev/studio', },
+    'RS_STUDIO_ENVS_DEV': { 'windows': 'S:/dev_area/production-dev/studio-envs', },
+    
     'RS_USER_HOME'    : { 'windows': 'T:/_COMMON_SHARE/Freelancers/${USERNAME}', },
-    'RS_USER_DEV_HOME': { 'windows': '${RS_SW_BASE}/dev_area/users/${USERNAME}', },
+    'RS_USER_DEV_HOME': { 'windows': 'S:/dev_area/users/${USERNAME}', },
+    
     }
 }
