--- a/env/dev_ht.env
+++ b/env/dev_ht.env
@@ -6,7 +6,7 @@
 
 'environment':
 	{
-	'RS_USER_DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/htariq/dev', },
+	'RS_USER_DEV_AREA': { 'windows': 'S:/dev_area/users/htariq/dev', },
 	
 	'CHANNEL': 'dev',
 	'RS_STUDIO_DEPLOY': '${RS_USER_DEV_AREA}/studio',
