--- a/env/maya.env
+++ b/env/maya.env
@@ -43,7 +43,7 @@
     
     'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
      
-    'RS_STUDIO_MAYA': '${RS_SW_BASE}/MayaAPPDIR',
+    'RS_STUDIO_MAYA': 'S:/MayaAPPDIR',
      
     'RS_STUDIO_ICONS': '${RS_STUDIO_MAYA}/icons',
     'MAYA_PRESETS_PATH': '${RS_STUDIO_MAYA}/presets',
