--- a/env/dev_jh.env
+++ b/env/dev_jh.env
@@ -6,7 +6,7 @@
 
 'environment':
 	{
-	'DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/jhenare/dev', },
+	'DEV_AREA': { 'windows': 'S:/dev_area/users/jhenare/dev', },
 	'PATH': { 'windows': '${RS_USER_DEV_AREA}/bin', },
 	}
 }
