--- a/env/dev_pr.env
+++ b/env/dev_pr.env
@@ -6,7 +6,7 @@
 
 'environment':
 	{
-	'DEV_AREA': { 'windows': '${RS_SW_BASE}/dev_area/users/pramji/dev', },
+	'DEV_AREA': { 'windows': 'S:/dev_area/users/pramji/dev', },
 	
 	'CHANNEL': 'dev',
 	'RS_STUDIO_DEPLOY': '${RS_USER_DEV_AREA}/studio',
