- added python version - added src/python to pythonpath - added iactive paths tp pythonpath - added extreran env rep for pythonpath

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -7,6 +7,7 @@
 'environment': {
     'RS_DEPARTMENT': 'POST',
     'MAYA_VERSION': '2015',
+    'PYTHON_VERSION': '2.7.9',
 
     'MAYA_LOCATION': { 'darwin' : '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
                        'linux'  : '/usr/autodesk/maya${MAYA_VERSION}-x64',
@@ -22,7 +23,7 @@
     
     'DYLD_LIBRARY_PATH': { 'darwin': '${MAYA_LOCATION}/MacOS', },
      
-    'RS_STUDIO_MAYA': '${RS_SW_BASE}/MayaAPPDIR',
+    'RS_STUDIO_MAYA': 'S:/MayaAPPDIR',
     
     'RS_STUDIO_ICONS':   '${RS_STUDIO_MAYA}/icons',
     'MAYA_PRESETS_PATH': '${RS_STUDIO_MAYA}/presets',
@@ -34,12 +35,11 @@
     # indirection envVars
     
     'RS_LAUNCHER' : '${RS_STUDIO_DEPLOY}/launcher/src',
-    'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src',
+    'RS_PY_TOOLS' : '${RS_STUDIO_DEPLOY}/tools/python/src;${RS_STUDIO_DEPLOY}/src/python',
     'RS_TOOLS_MEL': '${RS_STUDIO_DEPLOY}/tools/mel/src',
     
     'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
     
-    'RS_PY_SITE_PACKAGES': '${RS_LAUNCHER_MAYA}/env/lib/site-packages',
     'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
     
     'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
@@ -47,24 +47,55 @@
         'RS_TOOLS_MEL_OVERRIDES': '${MAYA_SCRIPT_PATH}/overrides',
     'RS_TOOLS_SHELF': '${RS_TOOLS_MEL}/shelves',
     
+    # Interactive env
+    
+    'RS_IACTIVE_TOOLS': 'S:/iactive',
+    
     },
 
 'optional': {
+    'stable': {
+        'STUDIO_VERSION': 'v0002',
+        'CHANNEL': 'stable',
+        
+        'RS_STUDIO_DEPLOY' :   '${RS_STUDIO_BASE}/${STUDIO_VERSION}',
+        'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
+        },
     'rc': {
         'CHANNEL': 'rc',
-        'RS_STUDIO_DEPLOY' : 'S:/dev_area/studio-${CHANNEL}',
+        
+        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'beta': {
         'CHANNEL': 'beta',
-        'RS_STUDIO_DEPLOY' : 'S:/dev_area/studio-${CHANNEL}',
+        
+        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'alpha': {
         'CHANNEL': 'alpha',
-        'RS_STUDIO_DEPLOY' : 'S:/dev_area/studio-${CHANNEL}',
+        
+        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-${CHANNEL}',
+        'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
         },
     'assetlib': {
         'CHANNEL': 'assetlib',
-        'RS_STUDIO_DEPLOY' : 'S:/dev_area/studio-assetlib',
+        
+        'RS_STUDIO_DEPLOY' : '${RS_STUDIO_BASE_DEV}/studio-assetlib',
+        'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
+        },
+    'dev': {
+        'CHANNEL': 'dev',
+        
+        'RS_PY_SITE_PACKAGES': '${RS_STUDIO_ENVS_DEV}/maya/${MAYA_VERSION}/python${PYTHON_VERSION}/lib/site-packages',
+        
+        'RS_IACTIVE_SHELF': '${RS_IACTIVE_TOOLS}/maya/scripts/shelves',
+        
+        'PYTHONPATH': '${RS_IACTIVE_TOOLS}/vred;'  \
+        '${RS_IACTIVE_TOOLS}/python;'  \
+        '${RS_IACTIVE_TOOLS}/maya;'  \
+        '${RS_IACTIVE_TOOLS}/maya/scripts',
         },
     },
 }
