--- a/env/mtoa_1_2_4.env
+++ b/env/mtoa_1_2_4.env
@@ -8,7 +8,9 @@
     {
     'MTOA_VERSION': '1.2.4.3',
 
-    'MTOA': 'S:/dev_area/solidangle/mtoa/${MTOA_VERSION}/${MAYA_VERSION}',
+    'MTOA': {'darwin': '${RS_SW_BASE}/solidangle/mtoa/${MTOA_VERSION}-darwin/${MAYA_VERSION}',
+              'linux': '${RS_SW_BASE}/solidangle/mtoa/${MTOA_VERSION}-linux/${MAYA_VERSION}',
+            'windows': '${RS_SW_BASE}/solidangle/mtoa/${MTOA_VERSION}-windows/${MAYA_VERSION}' },
     'MAYA_PLUG_IN_PATH': { 'windows': '${MTOA}/plug-ins', },
     
     'ARNOLD_PLUGIN_PATH': '${MTOA}/shaders',
