[add] alshaders to env

--- a/env/mtoa_1_2_4.env
+++ b/env/mtoa_1_2_4.env
@@ -6,7 +6,8 @@
 
 'environment':
     {
-    'MTOA_VERSION': '1.2.4.3',
+    'MTOA_VERSION':   '1.2.4.3',
+    'ARNOLD_VERSION': '4.2.11.0',
 
     'MTOA': {'darwin': '${RS_SW_BASE}/solidangle/mtoa/${MTOA_VERSION}-darwin/${MAYA_VERSION}',
               'linux': '${RS_SW_BASE}/solidangle/mtoa/${MTOA_VERSION}-linux/${MAYA_VERSION}',
