[add] NIM connector

--- a/env/maya_2015.env
+++ b/env/maya_2015.env
@@ -8,7 +8,9 @@
     'RS_DEPARTMENT': 'POST',
     'MAYA_VERSION': '2015',
     'PYTHON_VERSION': '2.7.9',
-
+    'DEADLINE_STANDALONE': '${RS_SW_BASE}/deadline/Deadline7',
+    'NIM_CONNECTOR': '${RS_SW_BASE}/NIM/nim_connector_v1-0-0-150810',
+    
     'MAYA_LOCATION': { 'darwin' : '/Applications/Autodesk/maya${MAYA_VERSION}/Maya.app/Contents',
                        'linux'  : '/usr/autodesk/maya${MAYA_VERSION}-x64',
                        'windows': 'C:/Program Files/Autodesk/Maya${MAYA_VERSION}', 
@@ -40,7 +42,7 @@
     
     'RS_LAUNCHER_MAYA': '${RS_LAUNCHER}/RS/launch/maya',
     
-    'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT}',
+    'PYTHONPATH': '${RS_PY_SITE_PACKAGES};${RS_PY_TOOLS};${RS_LAUNCHER};${RS_LAUNCHER_MAYA}/${RS_DEPARTMENT};${DEADLINE_STANDALONE}/python;${NIM_CONNECTOR}',
     
     'MAYA_SCRIPT_PATH': '${RS_TOOLS_MEL}/scripts',
         'RS_TOOLS_MEL_STARTUP'  : '${MAYA_SCRIPT_PATH}/startup',
