--- a/env/altus.env
+++ b/env/altus.env
@@ -7,7 +7,7 @@
 
 'environment':
     {
-    'altus_PATH': 'S:/dev_area/Applications/InnoBright/Altus',
+    'altus_PATH': '${RS_SW_BASE}/InnoBright/Altus',
     'altus_LICENSE': '5053@127.0.0.1',
     
     'MAYA_PLUG_IN_PATH': '${altus_PATH}/plug-ins',
